[package]
name = "deez"
version = "0.1.0"
edition = "2021"
authors = ["rektdeckard <frtiedm@gmail.com>"]

[lib]
name = "deez"
path = "src/lib/lib.rs"

[[bin]]
name = "deez"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
pest = "2"
pest_derive = "2"
rand = "0.8"
